--- a/.env.sample
+++ b/.env.sample
@@ -1,1 +1,10 @@
-NODE_ENV=development
+# Database Configuration
+DB_HOST=sql12.freemysqlhosting.net
+DB_NAME=sql12742813
+DB_USERNAME=sql12742813
+DB_PASSWORD=checkEmailOnDate5thNov
+DB_PORT=3306
+DB_DIALECT=mysql
+
+# Node Environment
+NODE_ENV=development 
